2016-11-23  Bruno Haible  <bruno@clisp.org>

	Update installation instructions for Windows.
	* README.windows: Assume a 64-bit Windows. Explain both 32-bit and
	64-bit builds. Add instructions for the MS Visual C/C++ tool chain.
	Revamp instructions for Cygwin.

2016-11-23  Bruno Haible  <bruno@clisp.org>

	Drop the nickname "woe32".
	* README.windows: Renamed from README.woe32.
	* doc/libunistring.texi (Installation): Update.
	* Makefile.am (EXTRA_DIST): Update.

2015-06-25  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.
	* NEWS: Mention 0.9.6 changes.

2015-02-16  Daiki Ueno  <ueno@gnu.org>

	* Version 0.9.5 released.

2015-02-16  Daiki Ueno  <ueno@gnu.org>

	* doc/uniname.texi (uniname.h): Document that
	unicode_name_character now also looks for aliases.

2015-02-16  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.
	* NEWS: Mention 0.9.5 changes.

2014-09-01  Daiki Ueno  <ueno@gnu.org>

	* Version 0.9.4 released.

2014-09-01  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.

2014-09-01  Daiki Ueno  <ueno@gnu.org>

	* configure.ac (AM_INIT_AUTOMAKE): Add dist-xz, so that xz-compressed
	.tar.xz tarballs will be distributed alongside .tar.gz ones.

2014-08-08  Daiki Ueno  <ueno@gnu.org>

	Replace deprecated $(mkdir_p) usage.
	Problem report and trivial fix by Nitin A Kamble in:
	https://lists.gnu.org/archive/html/bug-libunistring/2012-07/msg00000.html
	* doc/Makefile.am (installdirs-dvi, installdirs-ps)
	(installdirs-pdf, install-html-monolithic, install-html-split)
	(installdirs-html, dist-html-monolithic, dist-html-split): Use
	$(MKDIR_P) instead of deprecated $(mkdir_p).

2014-08-08  Daiki Ueno  <ueno@gnu.org>

	Fix parallel make race when generating unistring/cdefs.h.
	Trivial fix by Richard Purdie in:
	http://lists.openembedded.org/pipermail/openembedded-core/2012-April/059850.html