@@ -1,3 +1,9 @@
+2016-12-02  Bruno Haible  <bruno@clisp.org>
+
+	Allow use of automake-1.15.
+	* autogen.sh: Update comments. Make sure to get new versions of files
+	brought in by automake.
+
 2016-11-23  Bruno Haible  <bruno@clisp.org>
 
 	Update installation instructions for Windows.
